[tool.poetry]
name = "testapp"
version = "0.1.0"
description = ""
authors = ["Kirill Pystin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
prometheus-client = "^0.21.1"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
